[tool.poetry]
name = "langchain-sema4"
version = "0.2.0"
description = "An integration package connecting Sema4 and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain-sema4"
license = "MIT"

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-sema4/tree/main/libs/sema4"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = "^1.4.9"
requests = "^2.34.2"
urllib3 = "^2.7.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.1.1"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"
syrupy = "^5.5.3"
pytest-watcher = ">=0.3.4,<0.7.0"
pytest-asyncio = ">=0.21.1,<1.5.0"
langchain-core = "^1.4.9"

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = ">=0.1.5,<0.16.0"

[tool.poetry.group.typing.dependencies]
mypy = ">=0.991,<2.4"
langchain-core = "^1.4.9"
types-requests = "^2.32.4.20260107"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
langchain-core = "^1.4.9"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
  "requires: mark tests as requiring a specific library",
  "asyncio: mark tests as requiring asyncio",
  "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
